--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World
+Welcome to my website! My name is Emilio Aurea and I am a sophomore at UC Berkeley studying Computer Science.
+I am interested in using technology to advance education and building cool projects.
+My current project is developing this webpage.
+I also love to play basketball and pingpong. 
