--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-Welcome to my website! My name is Emilio Aurea and I am a sophomore at UC Berkeley studying Computer Science.
-I am interested in using technology to advance education and I love buidling cool projects.
-My current project is developing this webpage.
-I also love to play basketball and pingpong. 
+<style> 
+h1 {color: green;}</style>
+<h1> Emilio Aurea</h1>
+<p> Hello! Welcome to my webpage. My name is Emilio Aurea and I am a student at UC Berkeley studying Computer Science.
+I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
+projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball?</p>
