--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <style> 
 h1 {color: green;}</style>
 <h1> Emilio Aurea</h1>
+<h1> Am I green?</h1>
 <h2> Introduction</h2>
 <p> Hello! Welcome to my webpage. My name is Emilio Aurea and I am a student at UC Berkeley studying Computer Science.
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
