--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <style> 
-h1 {color: green;}</style>
+h1 {color: green;} // Using CSS to give ALL H1 tags the color green
+p {font-size: 30px;} // Chaning font size
+.yellow {color: yellow;} // Creating a class in CSS
+</style>
 <h1> Emilio Aurea</h1>
-<h1 style="color: red"> Web Developer, Father, Learner</h1>
-<h2> Introduction</h2>
+<h1 style="color: red"> Web Developer, Father, Learner</h1> // Overriding the green color in CSS
+  <h2 class="yellow"> Introduction</h2> //Using instance of class
 <p> Hello! Welcome to my webpage. My name is Emilio Aurea and I am a student at UC Berkeley studying Computer Science.
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
 projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball?</p>
