--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <style> 
-h1 {color: green;} //Using CSS to give ALL H1 tags the color green
-p {font-size: 30px;} // Chaning font size
-.yellow {color: yellow;} // Creating a class in CSS
+h1 {color: green;} /*Using CSS to give ALL H1 tags the color green */
+p {font-size: 30px;} /* Chaning font size */
+.yellow {color: yellow;} /* Creating a class in CSS */
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
