--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <style> 
-h1 {color: green;} /*Using CSS to give ALL H1 tags the color green */
+h1 {color: green;
+    font-size: 45px;
+} /*Using CSS to give ALL H1 tags the color green */
 p {font-size: 30px;} /* Chaning font size */
 .yellow {color: yellow;} /* Creating a class in CSS */
 </style>
