--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <style> 
 h1 {color: green;
     font-size: 45px;
-} /*Using CSS to give ALL H1 tags the color green */
-p {font-size: 30px;} /* Chaning font size */
+} /*Using CSS to give ALL H1 tags the color green and resize */
+p {font-size: 30px;
+    font-family: Monospace;
+} /* Chaning font size/family */
 .yellow {color: yellow;} /* Creating a class in CSS */
 </style>
 <h1> Emilio Aurea</h1>
