--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> <!-- Calling all lobsters -->
 <style> 
 h1 {color: green;
     font-size: 45px;
+    font-family: Lobster;
 } /*Using CSS to give ALL H1 tags the color green and resize */
 p {font-size: 30px;
     font-family: Monospace;
