--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> <!-- Calling all lobsters -->
+<!--<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 -->
 <style> 
 h1 {color: green;
@@ -15,4 +15,6 @@ p {font-size: 30px;
   <h2 class="yellow"> Introduction</h2> <!-- Using instance of class -->
 <p> Hello! Welcome to my webpage. My name is Emilio Aurea and I am a student at UC Berkeley studying Computer Science.
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
-projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball?</p>
+projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball
+By the way, here is a cat.</p>
+<img src="https://bit.ly/fcc-relaxing-cat">
