--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ p {font-size: 30px;
     font-family: Monospace;
 } /* Chaning font size/family */
 .yellow {color: yellow;} /* Creating a class in CSS */
+.smaller-image {width: 100px;}
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
@@ -16,4 +17,4 @@ p {font-size: 30px;
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
 projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball
 By the way, here is a cat.</p>
-<img src="https://bit.ly/fcc-relaxing-cat">
+<img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image">
