--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ p {font-size: 30px;
 } /* Chaning font size/family */
 .yellow {color: yellow;} /* Creating a class in CSS */
 .smaller-image {width: 100px;}
+.red-boarder {
+    border-color: red;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 10px;
+}
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
@@ -17,4 +23,4 @@ p {font-size: 30px;
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
 projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball
 By the way, here is a cat.</p>
-<img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image">
+<img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image red-boarder">
