--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ p {font-size: 30px;
     font-family: Monospace;
 } /* Chaning font size/family */
 .yellow {color: yellow;} /* Creating a class in CSS */
-.smaller-image {width: 100px;}
+.smaller-image {width: 500px;}
 .red-boarder {
     border-color: red;
     border-width: 10px;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 50%/*10px*/;
 }
 </style>
 <h1> Emilio Aurea</h1>
