--- a/index.html
+++ b/index.html
@@ -24,3 +24,6 @@ I an interested in using technology to improve education and tackle various othe
 projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball
 By the way, here is a cat.</p>
 <img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image red-boarder">
+<p> Checkout my 
+<a href="https://www.linkedin.com/in/emilioaurea"> LinkedIn</a>
+</p>
