--- a/index.html
+++ b/index.html
@@ -26,4 +26,6 @@ By the way, here is a cat.</p>
 <img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image red-boarder">
 <p> Checkout my 
 <a href="https://www.linkedin.com/in/emilioaurea"> LinkedIn</a>
+Or my
+<a href="#"> website</a>
 </p>
