--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p {font-size: 30px;
 I an interested in using technology to improve education and tackle various other challenges in the world. I also love building cool
 projects. My current project is developing this webpage. Did I mention that I love to play pingpong and basketball
 By the way, here is a cat.</p>
-<img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image red-boarder">
+<img src="https://bit.ly/fcc-relaxing-cat" class="smaller-image red-boarder" alt="Cute orange cat">
 <p> Checkout my 
 <a href="https://www.linkedin.com/in/emilioaurea"> LinkedIn</a>
 Or my
