--- a/index.html
+++ b/index.html
@@ -28,4 +28,13 @@ By the way, here is a cat.</p>
 <a href="https://www.linkedin.com/in/emilioaurea"> LinkedIn</a>
 Or my
 <a href="#"> website</a>
+Also, these are some things I like:
 </p>
+<ul>
+    <li>Food</li>
+    <li>Sleep</li>
+    <li>Basketball</li>
+    <li>PingPong</li>
+    <li>Video Games</li>
+    <li>Reading</li>
+</ul>
