--- a/index.html
+++ b/index.html
@@ -38,3 +38,12 @@ Also, these are some things I like:
     <li>Video Games</li>
     <li>Reading</li>
 </ul>
+<p> Here are some ares of study that I am interested in</p>
+<ol>
+    <li>Artificial Intelligence</li>
+    <li>Machine Learning</li>
+    <li>Full-Stack Web Development</li>
+    <li>Entreprenuership</li>
+    <li>The Science of Happiness</li>
+    <li>Computer Systems</li>
+</ol>
