--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@ Also, these are some things I like:
     <li>The Science of Happiness</li>
     <li>Computer Systems</li>
 </ol>
+<input type="text">
