--- a/index.html
+++ b/index.html
@@ -47,4 +47,7 @@ Also, these are some things I like:
     <li>The Science of Happiness</li>
     <li>Computer Systems</li>
 </ol>
-<input type="text" placeholder="Write Stuff Here">
+<form action="http://emilioaurea.github.io/">
+    <input type="text" placeholder="Write Stuff Here">
+    <button type="submit">Submit</button>
+</form>
