--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ Also, these are some things I like:
     <li>Computer Systems</li>
 </ol>
 <form action="http://emilioaurea.github.io/">
-    <input type="text" placeholder="Write Stuff Here">
+    <input type="text" placeholder="Write Stuff Here" required>
     <button type="submit">Submit</button>
 </form>
