--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ Also, these are some things I like:
     <li>Computer Systems</li>
 </ol>
 <form action="http://emilioaurea.github.io/">
+    <label>
+        <input type="radio" name="good_or_bad">Good</input>
+    </label>
+    <label>
+        <input type="radio" name="good_or_bad">Bad</input>
+    </label>
     <input type="text" placeholder="Write Stuff Here" required>
     <button type="submit">Submit</button>
 </form>
