--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@ Also, these are some things I like:
         <input type="radio" name="good_or_bad">Bad</input>
     </label>
     <input type="text" placeholder="Write Stuff Here" required>
+    <label>
+        <input type="checkbox" name="classes">CS61A</input>
+    </label>
+    <label>
+        <input type="checkbox" name="classes">CS61B</input>
+    </label>
+    <label>
+        <input type="checkbox" name="classes">CS61C</input>
+    </label>
     <button type="submit">Submit</button>
 </form>
