--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ Also, these are some things I like:
 </ol>
 <form action="http://emilioaurea.github.io/">
     <label>
-        <input type="radio" name="good_or_bad">Good</input>
+        <input type="radio" name="good_or_bad" checked>Good</input>
     </label>
     <label>
         <input type="radio" name="good_or_bad">Bad</input>
     </label>
     <input type="text" placeholder="Write Stuff Here" required>
     <label>
-        <input type="checkbox" name="classes">CS61A</input>
+        <input type="checkbox" name="classes" checked>CS61A</input>
     </label>
     <label>
         <input type="checkbox" name="classes">CS61B</input>
