--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ p {font-size: 30px;
     border-style: solid;
     border-radius: 50%/*10px*/;
 }
+.blue-background {
+    background-color: blue;
+}
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
@@ -30,6 +33,7 @@ Or my
 <a href="#"> website</a>
 Also, these are some things I like:
 </p>
+<div class="blue-background">
 <ul>
     <li>Food</li>
     <li>Sleep</li>
@@ -47,6 +51,7 @@ Also, these are some things I like:
     <li>The Science of Happiness</li>
     <li>Computer Systems</li>
 </ol>
+</div>
 <form action="http://emilioaurea.github.io/">
     <label>
         <input type="radio" name="good_or_bad" checked>Good</input>
