--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ p {font-size: 30px;
 .blue-background {
     background-color: blue;
 }
+#survey {
+    background-color: green;
+}
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
@@ -52,7 +55,7 @@ Also, these are some things I like:
     <li>Computer Systems</li>
 </ol>
 </div>
-<form action="http://emilioaurea.github.io/">
+<form action="http://emilioaurea.github.io/" id="survey">
     <label>
         <input type="radio" name="good_or_bad" checked>Good</input>
     </label>
