--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@ p {font-size: 30px;
 .blue-background {
     background-color: blue;
 }
-#survey {
+#survey { /* Use hastag for id's and . for classes and nothing for elements. */
     background-color: green;
 }
+/*Note on CSS inheritance: 
+1. Class declared in CSS.
+2. Class that was last declared in CSS.
+3. ID Tag.
+4. In-line style.
+5. !important
+*/
 </style>
 <h1> Emilio Aurea</h1>
 <h1 style="color: red"> Web Developer, Father, Learner</h1> <!-- // Overriding the green color in CSS -->
