--- a/index.html
+++ b/index.html
@@ -81,3 +81,4 @@ Also, these are some things I like:
     </label>
     <button type="submit">Submit</button>
 </form>
+<a href="Techresume2.pdf">My resume</a>
