--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ By the way, here is a cat.</p>
 ,my
     <a href="#"> website</a>
 or my,
-    <a href="Techresume2.pdf">My resume</a>
+    <a href="Techresume2.pdf">resume</a>
 Also, these are some things I like:
 </p>
 <div class="blue-background">
