--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container-fluid">
-  <h1>Coming soon...</h1>
+  <h1 class="text-primary text-center">Coming soon...</h1>
 </div>
 </body>
 </html>
