--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 <div class="container-fluid">
-  <h1 class="text-primary text-center">Coming soon...</h1>
+  <header>
+    <h1 class="text-primary text-center">Emilio Aurea</h1>
+  </header>
+  <nav>
+    <a>About Me</a>
+    <a>Projects</a>
+    <a>Work Experience</a>
+  </nav>
 </div>
 </body>
 </html>
