--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1 class="text-primary text-center">Emilio Aurea</h1>
   </header>
-  <nav>
+  <nav class="nav nav-tabs" role="tablist">
     <a>About Me</a>
     <a>Projects</a>
     <a>Work Experience</a>
