--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <header>
     <h1 class="text-primary text-center">Emilio Aurea</h1>
   </header>
-  <nav class="navbar navbar-default" role="navigation">
-    <a>About Me</a>
-    <a>Projects</a>
-    <a>Work Experience</a>
+  <nav>
+    <ul class="nav nav-tabs" role="tablist">
+      <li><a>About Me</a></li>
+      <li><a>Projects</a></li>
+      <li><a>Work Experience</a></li>
+    </ul>
   </nav>
 </div>
 </body>
