--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="text-primary text-center">Emilio Aurea</h1>
   </header>
   <nav>
-    <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs right-aligned" role="tablist">
       <li><a>About Me</a></li>
       <li><a>Projects</a></li>
       <li><a>Work Experience</a></li>
