--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <li><a>Work Experience</a></li>
     </ul>
   </nav>
+  <section class="bg-info">
+    <p>Hello World! My name is Emilio Aurea. I am currently studying Computer Science at beautiful UC Berkeley. In my spare time,
+    I like to learn new frameworks, languages, and hack on cool projects. I also love basketball and I'm a huge Stephen Curry fan --
+    GO WARRIORS! Hope you enjoy this webpage I've built and feel free to connect with me! Did I mention I have an adorable 3-year-
+    old son? </p>
+  </section>
 </div>
 </body>
 </html>
