--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
   </section>
   
   <!-- Contact info. -->
-  <footer>
+  <footer class="bg-danger">
     <p id="contact">This page was made by Emilio Aurea using Bootstrap.</p>
+    
   </footer>
 </div>
 </body>
