--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     I like to learn new frameworks, languages, and hack on cool projects. I also love basketball and I'm a huge Stephen Curry fan --
     GO WARRIORS! Hope you enjoy this webpage I've built and feel free to connect with me! Did I mention I have an adorable 3-year-
     old son? </p>
+    <img src="emilio_and_jace.jpg" alt="A father and his son." class="image-responsive">
   </section>
   
   <!-- This is the portfolio sections. -->
