--- a/index.html
+++ b/index.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Emilio Aurea Personal Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-  
-  <!-- First thing people see. -->
-  <header>
-    <h1 class="text-primary text-center">Emilio Aurea</h1>
-  </header>
-  
-  <!-- Handly little nav at the top in HTML5. -->
-  <nav>
-    <ul class="nav nav-tabs" role="tablist">
-      <li><a href="#me">About Me</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#work">Work Experience</a></li>
-      <li><a href="#contact">Contact Info</a></li>
-    </ul>
-  </nav>
-  
-  <!-- This is the about me portion. -->
-  <section class="bg-info">
-    <h2 id="me">About me</h2>
-    <div class="row">
-      <div class="col-xs-6">
-        <img src="emilio_and_jace.jpg" alt="A father and his son." class="img-responsive" width="300" height="450">
-      </div>
-      <div class="col-xs-6 col-md-4 text-center">
-        <p style="font-size:20px">Hello World! My name is Emilio Aurea. I am currently studying Computer Science at beautiful UC Berkeley. In my spare time,
-        I like to learn new frameworks, languages, and hack on cool projects. I also love basketball and I'm a huge Stephen Curry fan --
-        GO WARRIORS! Hope you enjoy this webpage I've built and feel free to connect with me! Did I mention I have an adorable 3-year-old son?
-        </p>
-      </div>
-    </div>
-  </section>
-  
-  <!-- This is the portfolio sections. -->
-  <section class="bg-success">
-    <h2 id="projects">Projects</h2>
-  </section>
-  
-  <!-- Work Experience or lack thereof. -->
-  <section class="bg-warning">
-    <h2 id="work">Work Experience</h2>
-  </section>
-  
-  <!-- Contact info. -->
-  <footer class="bg-danger">
-    <h2 id="contact">Contact Info</h2>
-    <p>This page was made by Emilio Aurea using Bootstrap.
-      Reach out to me through the following:
-    </p>
 
-    <!-- Social Media Buttons/Links. -->
+<!-- Navigation -->
+  <nav class="navbar navbar-light navbar-fixed-top">
+    <div class="container-fluid">
+      <ul class="navbar-nav nav nav-pills">
+        <li class="nav-item">
+          <a href="#about-me" class="navlink"><span class="glyphicon glyphicon-user"></span> About Me</a>
+        </li>
+        <li class="nav-item">
+          <a href="#portfolio" class="navlink"><span class="glyphicon glyphicon-folder-open"></span> Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="navlink"><span class="glyphicon glyphicon-envelope"></span> Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+<!-- About me -->
+  <section id="about-me" class="container-fluid">
     <div class="row">
-    <div class="col-xs-6">
-      <h4>Social</h4>
-      <div class="well" id="left-well">
-        <a href="https://www.facebook.com/people/Emilio-Aurea/100005920546247" class="btn btn-info" role="button" id="facebook" target="_blank">Facebook</a>
-        <a href="https://twitter.com/emilioaurea?lang=en" class="btn btn-info" role="button" id="twitter" target="_blank">Twitter</a>
-        <a href="https://www.hackerrank.com/emilioaurea" class="btn btn-info" role="button" id="hackerrank" target="_blank">HackerRank</a>
+      <div class="col-sm-6">
+        <img src="emilio_and_jace.jpg" alt="Emilio and Jace" id="emilio_and_jace" class="img-responsive img-rounded">
+      </div>
+      <div class="col-sm-6">
+        <div class="jumbotron">
+          <h1>Hello, World!</h1>
+          <p>My name is Emilio Aurea. I am currently studying Computer Science at UC Berkeley. I love learning about Artificial Intelligence, Machine Learning, Mobile Apps and Full Stack Web Development. My current project is creating this mobile-responsive webpage. </p>
+        </div>
       </div>
     </div>
-    <div class="col-xs-6">
-      <h4>Professional</h4>
-      <div class="well" id="right-well">
-        <a href="https://github.com/emilioaurea" class="btn btn-info" role="button" id="github" target="_blank">Github</a>
-        <a href="https://www.linkedin.com/in/emilioaurea" class="btn btn-info" role="button" id="linkedin" target="_blank">LinkedIn</a>
-        <a href="http://aap.berkeley.edu/career-transition/sage-scholars-program/sage-scholars" class="btn btn-info" role="button" id="sage scholars" target="_blank">SAGE Scholars</a>
+  </section>
+
+<!-- Portfolio -->
+  <section id="portfolio" class="container-fluid">
+    <h2 class="text-center">Projects</h2>
+    <div class="row">
+      <div class="col-sm-6">
+        <div style="background-color:black;" class="thumnail">
+          <p>This is my personal website.</p>
+        </div>
       </div>
+      <div class="col-sm-6">
+        <div style="background-color:white;" class="thumnail">
+          <p>This is another project.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- Contact -->
+  <footer id="contact" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6">
+      <h5>Check me out around the web:</h5>
+    </div>
+    <div class="col-sm-6">
+        <a href="https://github.com/emilioaurea" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/emilioaurea" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/people/Emilio-Aurea/100005920546247" target="_blank"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/emilioaurea" target="_blank"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/e_aurea/" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+        <a href="mailto:emilioaurea@gmail.com"><i class="fa fa-envelope fa-3x" aria-hidden="true"></i></a>
     </div>
   </div>
   </footer>
-</div>
 </body>
 </html>
