--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <div class="col-sm-6">
         <div class="jumbotron">
           <h1>Hello, World!</h1>
-          <p>My name is Emilio Aurea. I am currently studying Computer Science at UC Berkeley. I love learning about Artificial Intelligence, Machine Learning, Mobile Apps and Full Stack Web Development. My current project is creating this mobile-responsive webpage. </p>
+          <p>My name is Emilio Aurea. I am currently studying Computer Science at UC Berkeley. I love learning about Artificial Intelligence, Machine Learning, Mobile Apps and Full Stack Web Development. My current project is creating this mobile-responsive webpage. Also, check out my 
+          <a href="emilioaurea_resume.pdf">resume</a></p>
         </div>
       </div>
     </div>
