--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
     <div class="row">
       <div class="col-sm-6">
         <div style="background-color:black;" class="thumnail">
-          <p>This is my personal website.</p>
+          <h2>Personal Website.</h2>
+          <p>Built a mobile-responsive website using HTML5, CSS3, and Bootstrap. Currently refining the design aspect.</p>
         </div>
       </div>
       <div class="col-sm-6">
         <div style="background-color:white;" class="thumnail">
-          <p>This is another project.</p>
+          <h2>More projects soon to come.<h2>
         </div>
       </div>
     </div>
